# pytest-langchain

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  publish.yaml
src/pytest_langchain/: __init__.py  __main__.py  plugin.py
src/pytest_langchain/tests/: conftest.py  test_chain.py
tests/: test_cli.py
tests/test_data/: config.yaml  llm_chain.yaml
