[bumpversion]
current_version = 0.1.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)?
serialize = 
	{major}.{minor}.{patch}

[bumpversion:file:src/pytest_langchain/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = pytest-langchain
version = attr: pytest_langchain.__version__
author = Ajinkya Indulkar
author_email = 26824103+ajndkr@users.noreply.github.com
description = Pytest-style test runner for langchain agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajndkr/pytest-langchain
license = MIT License
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find_namespace:
python_requires = >=3.7,<3.11
install_requires = 
	click
	pytest
	PyYAML
	langchain

[options.packages.find]
where = src

[options.entry_points]
pytest11 = 
	langchain = pytest_langchain.plugin
console_scripts = 
	pytest-langchain = pytest_langchain:main

[mypy]
ignore_missing_imports = True
